fix: arrows was scrolling, put hidden overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -325,6 +325,7 @@ nav {
     display: flex;
     justify-content: center;
     gap: 1rem;
+    overflow: hidden;
 }
 
 footer {
